@@ -202,6 +202,11 @@ $languages['bg_BG']['CHARSET'] = 'windows-1251';
 $languages['bg_BG']['LOCALE']  = 'bg_BG.CP1251';
 $languages['bg']['ALIAS']      = 'bg_BG';
 
+$languages['bn_IN']['NAME']    = 'Bengali';
+$languages['bn_IN']['CHARSET'] = 'utf-8';
+$languages['bn_IN']['LOCALE']  = 'bn_IN.UTF-8';
+$languages['bn']['ALIAS'] = 'bn_IN';
+
 $languages['ca_ES']['NAME']    = 'Catalan';
 $languages['ca_ES']['CHARSET'] = 'iso-8859-1';
 $languages['ca_ES']['LOCALE']  = 'ca_ES.ISO8859-1';
